--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
