--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.2.0",
     "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.5.0",
