feat: add new components and update project structure

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ ACCESS_TOKEN_SECRET = fazil
 PORT =8001
 MONGODB_URI = mongodb+srv://fazil:fazil123@fazak.5hyej.mongodb.net/?retryWrites=true&w=majority&appName=fazak
 REFRESH_TOKEN_SECRET=fazil123
-ACCESS_TOKEN_EXPIRY= 1h
+ACCESS_TOKEN_EXPIRY= 1d
 REFRESH_TOKEN_EXPIRY= 10d 
 RESET_TOKEN_SECRET= 123123
 CORS_ORIGIN= *
