--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite p review"
@@ -23,6 +23,7 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
@@ -34,5 +35,5 @@
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1"
   },
-   "proxy": "http://localhost:8001"
+  "proxy": "http://localhost:8001"
 }
