--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite p review"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -19,21 +20,28 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "mongodb-memory-server": "^10.1.4",
+    "node-mocks-http": "^1.17.2",
     "nodemon": "^3.1.7",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "vitest": "^3.1.4"
   },
   "dependencies": {
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "D": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.6"
   },
   "proxy": "http://localhost:8001"
 }
