--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "@reduxjs/toolkit": "^2.5.0",
     "apexcharts": "^4.0.0",
+    "axios": "^1.9.0",
     "flowbite": "^2.5.2",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-apexcharts": "^1.6.0",
     "react-dom": "^18.3.1",
@@ -46,6 +48,6 @@
     "globals": "^15.11.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.10"
+    "vite": "^6.3.3"
   }
 }
