Your commit message

--- a/backend/.env
+++ b/backend/.env
@@ -24,3 +24,4 @@ NGROK_AUTH_TOKEN= 2vPImeoKtSWJREt3rBGadp6KSyG_5YeEWNV4YPv9PDduv3eaX
 EMAIL_USER=ahfazilahfazil@gmail.com
 EMAIL_PASS=spqezlqoowyvwiap
 
+DEEPSEEK_API_KEY=sk-2562e6283d884446ac5caac2b8b7009a
